src/test/deca/context/valid/wobj/test_print_float.deca
// Description:
//    Programme minimaliste utilisant print d'un float.
//
// Resultats:
//    affichage de 12.34
//
// Historique:
//    cree le 01/01/2024

{
        print(12.34);
}
